<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.RoutineActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" tools:layout_editor_absoluteY="0dp"
        tools:layout_editor_absoluteX="0dp">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorAccent"
            android:fitsSystemWindows="true"
            app:elevation="0dip"
            app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbarAdd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:titleTextColor="@color/colorPrimaryDark"/>
        </com.google.android.material.appbar.AppBarLayout>


        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/appBarLayout"
            android:fillViewport="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/routineTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:hint="@string/hint_routineTitle"
                    android:inputType="text"
                    android:maxLength="25"
                    android:maxLines="1"
                    android:padding="8dp"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="14sp"/>

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:hint="@string/hint_routineDescription"
                    android:inputType="text"
                    android:maxLength="25"
                    android:maxLines="1"
                    android:padding="8dp"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="14sp"/>

                <Button
                    android:id="@+id/pickDate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:paddingBottom="8dp"
                    android:paddingTop="8dp"
                    android:background="@color/colorAccent"
                    android:text="Pick Date"
                    android:textColor="@color/colorPrimary"
                    android:textSize="16sp"/>

                <TextView
                    android:id="@+id/showDate"
                    android:layout_width="242dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:paddingBottom="8dp"
                    android:paddingTop="8dp"
                    android:text="Date"/>


                <ImageView
                    android:id="@+id/routineImage"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:srcCompat="@mipmap/ic_launcher"/>
                <Button
                    android:id="@+id/chooseImage"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:background="@color/colorAccent"
                    android:paddingBottom="8dp"
                    android:paddingTop="8dp"
                    android:text="@string/button_addImage"
                    android:textColor="@color/colorPrimary"
                    android:textSize="16sp"/>

                <Button
                    android:id="@+id/routineLocation"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:background="@color/colorAccent"
                    android:paddingBottom="8dp"
                    android:paddingTop="8dp"
                    android:stateListAnimator="@null"
                    android:text="@string/button_location"
                    android:textColor="@color/colorPrimary"
                    android:textSize="16sp"/>
                <Button
                    android:id="@+id/btnAdd"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:background="@color/colorAccent"
                    android:paddingBottom="8dp"
                    android:paddingTop="8dp"
                    android:stateListAnimator="@null"
                    android:text="@string/button_addRoutine"
                    android:textColor="@color/colorPrimary"
                    android:textSize="16sp"/>


            </LinearLayout>
        </ScrollView>

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>